  closed mutator (causing an exception)
- support mutators with auto-flush
  - update Thrift-generated ruby code to code supplied in Hypertable 0.9.2.6
- some exceptions in write_cells method were being masked by exceptions in 
  ensure block, making it difficult to identify root cause of problem
- fix potential infinite loop in each_row

0.2.6 2009/04/20
- fix bug interacting with new open_scanner API

0.2.5 2009/04/20
- added methods to raw ruby thrift client for iterating over large results
  - each_cell_as_arrays
  - each_row (still has bug in underlying code)
  - each_row_as_arrays (still has bug in underlying code)
- new HyperRecord methods for iterating over results in small batches, doesn't 
  exhaust memory on million-row queries
  - find_each_row (returns each row as HyperRecord object)
  - find_each_row_as_arrays (returns each row in native array format - fast)
  - find_to_scan_spec methods (converts finder options to scan spec)
  - find_with_scanner (converts finder options to a scanner)
- new finder option (:row_intervals) that retrieves cells from multiple 
  row intervals in a single query
- now depends on Thrift SVN revision 765279 or later.

0.2.4 2009/04/06
- find_by_hql support
- support for :select option in calls to ActiveRecord.find
- expose open_mutator, flush_mutator and close_mutator methods to HyperRecord
  to help speed up write-heavy applications
- don't duplicate cells unnecessarily while assembling rows

0.2.3 on 2009/03/18
- optimize writes by using set_cells_as_arrays to write data in cell native
  array form
- monkey patch borrow method of Thrift::FramedTransport needed to return
  substrings as well

0.2.2 on 2009/03/17
- monkey patch Thrift::FramedTransport to fix performance issue in thrift
  transport ruby code (1000x faster than default implementation)
- import and utilize new thrift client moethods that implement native
  array interface for cell retrieval (100x faster than creating
  Hypertable::ThriftGen::Cell objects)
